BTWCT-3688: Linewrap mixin and width fix

--- a/waters-aem-frontend/src/styles/detail-tiles.scss
+++ b/waters-aem-frontend/src/styles/detail-tiles.scss
@@ -277,17 +277,8 @@
 
         &--title {
             @include font-h3;
-            display: inline;
+            @include linewrap;
             margin-bottom: $space-xxxs;
-            overflow-wrap: break-word;
-            word-wrap: break-word;
-            -ms-word-break: break-all;
-            word-break: break-all;
-            word-break: break-word;
-            -ms-hyphens: auto;
-            -moz-hyphens: auto;
-            -webkit-hyphens: auto;
-            hyphens: auto;
         }
 
         &--text {
